# AzDo-TimeSheets

./: .gitignore  AGENTS.MD  README.MD  pyproject.toml
azdo_timesheets/: __init__.py  __main__.py  cli.py  storage.py
src/azdo_timesheet/: __main__.py  cli.py  models.py  storage.py
src/azdo_timesheet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py
