[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azdo-timesheet"
version = "0.4.0"
description = "Low-entry Azure DevOps timesheet (local-first)."
readme = "README.MD"
requires-python = ">=3.10"
license = { text = "TBD" }
dependencies = ["PyYAML>=6.0"]

[project.scripts]
azdo-timesheet = "azdo_timesheet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
